Further refactor to replace Java 17 structural patterns with compatible code and convert `record` types to standard classes